<resources>
    <string name="app_name">GolfBuddy</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="firstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="FirstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="register">Register</string>
    <string name="title_activity_new_round">NewRound</string>
    <string name="title_activity_test">Test</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tv_lat_text">Latitude:	N/A</string>
    <string name="tv_long_text">Longitude:	N/A</string>

    <string-array name="county">
        <item>Dublin</item>
        <item>Wicklow</item>
        <item>Cork</item>
        <item>Wexford</item>
        <item>Waterford</item>
        <item>Kerry</item>
        <item>Galway</item>
        <item>Meath</item>
        <item>Sligo</item>

    </string-array>
    <string name="title_activity_distance_measure_map">Map</string>
    <string name="title_activity_maps">Map</string>
</resources>
